# ssl-embeddings-to-articulatory

./: README.md  ema_preprocess.py  pyproject.toml
preprocessing/: ema_preprocess.py
src/: ssl_latent_features_extraction.py
src/plots/E2/: E2_training_size.py  E2_training_size_color_blindness_simulator_1
src/plots/E5/: E5_LOSO_language.py  E5_LOSO_tasks.py
