[project]
name = "UEF-paper"
version = "0.1.0"
description = ""
authors = [
    {name = "Ailín Pollio San Pedro"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12.0"
dependencies = [
    "keras (>=3.11.2,<4.0.0)",
    "praat-parselmouth (>=0.4.6,<0.5.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "transformers (>=4.55.2,<5.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "torch (==2.6.0)",
    "torchaudio (==2.6.0)",
    "torchvision (==0.21.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
